Fixed overflow for content on wallpage

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,5 @@
 .App{
     background-color:grey;
-    height: 100vh;
 }
 .main-body{
     display: flex;
