--- a/frontend/src/styles/signin.css
+++ b/frontend/src/styles/signin.css
@@ -4,3 +4,8 @@
     justify-content: flex-start;
     color: white;
 }
+
+.text-control{
+    display: flex;
+    align-items: center;
+}
